--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwmSu45qN8tlKTZb5Dgj80",
+      "authorship_tag": "ABX9TyPmJKSaF1OVG8I8PY/iKXhH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,9 +374,161 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "numero1 = int(input('digite um número: '))\n",
+        "numero2 = int(input('digite outro número (diferente do anterior): '))\n",
+        "\n",
+        "if numero1>numero2:\n",
+        "  print(f'{numero1} (primeiro numero digitado) é maior que {numero2} (segundo numero digitado)')\n",
+        "else:\n",
+        "  print(f'{numero2} (segundo numero digitado) é maior que {numero1} (primeiro numero digitado)')"
+      ],
+      "metadata": {
+        "id": "_ZAQ3F7eFPXn",
+        "outputId": "4f7a5844-2ab5-4498-abdc-d06976e6d52e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número: 10\n",
+            "digite outro número (diferente do anterior): 4\n",
+            "10 (primeiro numero digitado) é maior que 4 (segundo numero digitado)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "letra = input('digite uma letra: ').lower()\n",
+        "vogais = 'aeiou'\n",
+        "if letra in vogais:\n",
+        "  print('sua letra é uma vogal')\n",
+        "else:\n",
+        "  print('sua letra é uma consoante')"
+      ],
+      "metadata": {
+        "id": "erFvYZOfZoOq",
+        "outputId": "a7f5a912-c3d6-40a4-a056-35d31cbd811b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite uma letra: a\n",
+            "sua letra é uma vogal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##Escreva um programa que leia valores médios de preços de um modelo de carro por 3 anos consecutivos e exiba o valor mais alto e mais baixo entre esses três anos.\n",
+        "\n",
+        "valor1 = float(input('digite o valor do carro no primeiro ano: '))\n",
+        "valor2 = float(input('digite o valor do carro no segundo ano: '))\n",
+        "valor3 = float(input('digite o valor do carro no terceiro ano: '))\n",
+        "\n",
+        "maior = valor1\n",
+        "if valor2 > maior:\n",
+        "  maior = valor2\n",
+        "if valor3 > maior:\n",
+        "  maior = valor2\n",
+        "\n",
+        "menor = valor1\n",
+        "if valor2 < menor:\n",
+        "  menor = valor2\n",
+        "if valor3 < menor:\n",
+        "  menor = valor3\n",
+        "\n",
+        "print(str(f'o maior valor é: {maior}'))\n",
+        "print(str(f'o menor valor é: {menor}'))"
+      ],
+      "metadata": {
+        "id": "U1oJO3FkaCaY",
+        "outputId": "e06b33b3-306f-418a-9b1c-9d405a09597e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o valor do carro no primeiro ano: 10.000\n",
+            "digite o valor do carro no segundo ano: 8000\n",
+            "digite o valor do carro no terceiro ano: 5000\n",
+            "o maior valor é: 8000.0\n",
+            "o menor valor é: 10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##Escreva um programa que pergunte sobre o preço de três produtos e indique qual é o produto mais barato para comprar.\n",
+        "\n",
+        "valor1 = float(input('digite o valor do produto: R$'))\n",
+        "valor2 = float(input('digite o valor do produto: R$'))\n",
+        "valor3 = float(input('digite o valor do produto: R$'))\n",
+        "\n",
+        "if valor1 < valor2 and valor1 < valor3:\n",
+        "    print('O primeiro produto é o mais barato.')\n",
+        "elif valor2 < valor1 and valor2 < valor3:\n",
+        "    print('O segundo produto é o mais barato.')\n",
+        "elif valor3 < valor1 and valor3 < valor2:\n",
+        "    print('O terceiro produto é o mais barato.')\n",
+        "elif valor1 == valor2 == valor3:\n",
+        "    print('Os produtos possuem o mesmo preço.')\n",
+        "else:\n",
+        "    if valor1 == valor2:\n",
+        "        print('O primeiro e o segundo produtos são os mais baratos.')\n",
+        "    elif valor2 == valor3:\n",
+        "        print('O segundo e terceiro produtos são os mais baratos.')\n",
+        "    elif valor1 == valor3:\n",
+        "        print('O primeiro e o terceiro produtos são os mais baratos.')"
+      ],
+      "metadata": {
+        "id": "ROlB5XuwcMdY",
+        "outputId": "3ff8bb1b-df08-483c-f2ec-7ec3219b5e2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o valor do produto: R$100\n",
+            "digite o valor do produto: R$200\n",
+            "digite o valor do produto: R$150\n",
+            "O primeiro produto é o mais barato.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_ZAQ3F7eFPXn"
+        "id": "h1F3DThxdGHp"
       },
       "execution_count": null,
       "outputs": []
